// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > #handleResult > Should handle errors within ResultHandler 1`] = `
[
  [
    "Result handler failure",
    ResultHandlerError({
      "cause": AssertionError({
        "message": "Something unexpected happened",
      }),
      "message": "Something unexpected happened",
    }),
  ],
]
`;

exports[`Endpoint > .getResponses() > should return the negative responses (readonly) 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "_type": "ZodObject",
      "shape": {
        "error": {
          "_type": "ZodObject",
          "shape": {
            "message": {
              "_type": "ZodString",
            },
          },
        },
        "status": {
          "_type": "ZodLiteral",
          "value": "error",
        },
      },
    },
    "statusCodes": [
      400,
    ],
  },
]
`;

exports[`Endpoint > .getResponses() > should return the positive responses (readonly) 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "_type": "ZodObject",
      "shape": {
        "data": {
          "_type": "ZodObject",
          "shape": {
            "something": {
              "_type": "ZodNumber",
            },
          },
        },
        "status": {
          "_type": "ZodLiteral",
          "value": "success",
        },
      },
    },
    "statusCodes": [
      200,
    ],
  },
]
`;

exports[`Endpoint > Issue #585: Handling non-Error exceptions > thrown in #handleResult() 1`] = `
[
  [
    "Result handler failure",
    ResultHandlerError({
      "cause": AssertionError({
        "message": "Something unexpected happened",
      }),
      "message": "Something unexpected happened",
    }),
  ],
]
`;
